# EasyBypassRestrictions

./: .gitignore  LISENCE  README.md  build.gradle  publish.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/java/com/wind/storm/bypass/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
easyBypass/: build.gradle  consumer-rules.pro
easyBypass/src/main/: AndroidManifest.xml
easyBypass/src/main/cpp/: CMakeLists.txt  bypassed_dlfcn.c  common.h  fake_dlfcn.c  main.c
easyBypass/src/main/cpp/include/: bypassed_dlfcn.h  fake_dlfcn.h
easyBypass/src/main/java/com/wind/storm/easybypass/: EasyBypass.java
gradle/wrapper/: gradle-wrapper.properties
